crates/slack/tests/snapshots/rendering__a_broken_template_degrades_to_the_hardcoded_message.snap
---
source: crates/slack/tests/rendering.rs
expression: snapshot_of(&rendered)
---
{
  "attachments": [
    {
      "blocks": [
        {
          "text": {
            "text": "*FIRING · CephOSDDown*\n`a1b2c3d4e5f60718`\n_alertthread could not render its message template, so this is the built-in minimal message. The alert itself is unaffected; check `alertthread_fallback_posts_total`._",
            "type": "mrkdwn"
          },
          "type": "section"
        }
      ],
      "color": "#d40e0d",
      "fallback": "FIRING · CephOSDDown"
    }
  ],
  "text": "FIRING · CephOSDDown"
}
