crates/slack/tests/snapshots/rendering__a_pathological_annotation_is_truncated_at_the_block_limit_too.snap
---
source: crates/slack/tests/rendering.rs
expression: notice
---
:scissors: _truncated to fit Slack's limits — 253233 characters omitted. Shorten the annotation or the template._
