crates/slack/tests/snapshots/rendering__an_over_long_annotation_is_split_across_blocks_and_loses_nothing.snap
---
source: crates/slack/tests/rendering.rs
expression: shape
---
[
  "section(3000 chars)",
  "section(3000 chars)",
  "section(1436 chars)"
]
