crates/slack/tests/snapshots/rendering__group_summary_with_no_group_labels_at_all.snap
---
source: crates/slack/tests/rendering.rs
expression: snapshot_of(&rendered)
---
{
  "attachments": [
    {
      "blocks": [
        {
          "text": {
            "text": "*:rotating_light: FIRING · 12 of 12 alerts* · {}/{}:{}\n\n_Alertmanager group_ `{}/{}:{}`\n_Each alert is threaded under this message and updated there as it resolves._",
            "type": "mrkdwn"
          },
          "type": "section"
        }
      ],
      "color": "#d40e0d",
      "fallback": ":rotating_light: FIRING · 12 of 12 alerts · {}/{}:{}"
    }
  ],
  "text": ":rotating_light: FIRING · 12 of 12 alerts · {}/{}:{}"
}
