crates/slack/tests/snapshots/rendering__thread_reply.snap
---
source: crates/slack/tests/rendering.rs
expression: snapshot_of(&rendered)
---
{
  "attachments": [
    {
      "blocks": [
        {
          "text": {
            "text": ":white_check_mark: *Resolved* after 29m 0s — 2026-07-21 14:31:00 UTC",
            "type": "mrkdwn"
          },
          "type": "section"
        }
      ],
      "color": "#2eb886",
      "fallback": ":white_check_mark: Resolved after 29m 0s — 2026-07-21 14:31:00 UTC"
    }
  ],
  "text": ":white_check_mark: Resolved after 29m 0s — 2026-07-21 14:31:00 UTC"
}
